NginxWebLB/Ingress/k8s-test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: lab
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /blue
            pathType: Exact
            backend:
              service:
                name: web-blue
                port:
                  number: 80
          - path: /green
            pathType: Exact
            backend:
              service:
                name: web-green
                port:
                  number: 80
